Fix adaptive alignment of block element

--- a/src/static/styles/components/common/_block.scss
+++ b/src/static/styles/components/common/_block.scss
@@ -4,6 +4,7 @@
   width: 100%;
   display: flex;
   align-items: center;
+  flex-direction: column;
 
   img {
     width: 100%;
